# run-zcode

./: README.md  meson.build
po/: POTFILES  ca.po  es.po  meson.build  run-zcode.pot
src/: main.c  meson.build
src/core/: dictionary.c  dictionary.h  disassembler.c  disassembler.h  iff.c  iff.h  instruction.h  interpreter.c  interpreter.h  memory_map.c  memory_map.h  meson.build  state.c  state.h  story_file.c  story_file.h  tracer.h
src/debug/: debugger.c  debugger.h  meson.build  tokenizer.c  tokenizer.h  tracer.c  tracer.h
src/frontend/: conf.c  conf.h  extra_chars.c  extra_chars.h  fonts.c  fonts.h  meson.build  saves.c  saves.h  screen.c  screen.h  window.c  window.h
src/utils/: error.c  error.h  log.c  log.h  meson.build
