CORE= static_library('core',
                     'iff.h',
                     'iff.c',
                     'interpreter.h',
                     'interpreter.c',
                     'state.h',
                     'state.c',
                     'story_file.h',
                     'story_file.c',
                     include_directories: [ROOT_H],
                     dependencies : [GLIB2])
                     