CORE= static_library('core',
                     'disassembler.h',
                     'disassembler.c',
                     'iff.h',
                     'iff.c',
                     'instruction.h',
                     'interpreter.h',
                     'interpreter.c',
                     'memory_map.h',
                     'memory_map.c',
                     'state.h',
                     'state.c',
                     'story_file.h',
                     'story_file.c',
                     'tracer.h',
                     include_directories: [ROOT_H],
                     dependencies : [GLIB2,SDL2])
                     