DEBUG= static_library('debug',
                      'debugger.h',
                      'debugger.c',
                      'tokenizer.h',
                      'tokenizer.c',
                      'tracer.h',
                      'tracer.c',
                      include_directories: [ROOT_H],
                      dependencies : [GLIB2,SDL2])
