FRONTEND= static_library('frontend',
                         'conf.h',
                         'conf.c',
                         'fonts.h',
                         'fonts.c',
                         include_directories: [ROOT_H],
                         dependencies : [GLIB2,FONTCONFIG,SDL2TTF])
