FRONTEND= static_library('frontend',
                         'conf.h',
                         'conf.c',
                         'fonts.h',
                         'fonts.c',
                         'screen.h',
                         'screen.c',
                         'window.h',
                         'window.c',
                         include_directories: [ROOT_H],
                         dependencies : [GLIB2,FONTCONFIG,SDL2TTF,SDL2])
