FRONTEND= static_library('frontend',
                         'conf.h',
                         'conf.c',
                         'fonts.h',
                         'fonts.c',
                         'saves.h',
                         'saves.c',
                         'screen.h',
                         'screen.c',
                         'window.h',
                         'window.c',
                         include_directories: [ROOT_H],
                         dependencies : [GLIB2,FONTCONFIG,SDL2TTF,SDL2])
